--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,5 @@ django-elasticsearch-dsl>=7.1.4, <7.2.0
 django_elasticsearch_dsl_drf>=0.21, <1.0
 
 elasticsearch>=7.0.0,<8.0.0
+
+coverage>=5.5,<6.0
