--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -4,11 +4,41 @@ on:
   push:
     branches: 
       - main
+      - micson-codetest
   pull_request:
     branches: 
       - main
-
+      - micson-codetest
 jobs:
+  run:
+    name: Code Test
+    runs-on: ubuntu-latest
+    env:
+      OS: ubuntu-latest
+      PYTHON: '3.9'
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r ./requirements.txt
+    - name: Generate Coverage Report
+      run: |
+        pip install pytest
+        pip install pytest-cov
+        pwd
+        pytest app/core/tests/*.py --doctest-modules --junitxml=junit/test-results.xml --cov=openlxp-xia-dau --cov-report=xml --cov-report=html
+    - name: Upload Coverage to Codecov
+      uses: codecov/codecov-action@v1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        fail_ci_if_error: true
+        path_to_write_report: ./coverage/codecov_report.txt
+        
   build:
     name: Build Docker Image
     runs-on: ubuntu-latest
@@ -23,7 +53,7 @@ jobs:
        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     - name: Docker build
       run: |
-       docker build . -t openlxp/openlxp-xds
+       docker build . -t openlxp/openlxp-xia-dau
     - name: Push Image
       run: |
-        docker push openlxp/openlxp-xds
+        docker push openlxp/openlxp-xia-dau
