--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -31,7 +31,7 @@ jobs:
         pip install pytest
         pip install pytest-cov
         pwd
-        pytest app/core/tests/*.py --doctest-modules --junitxml=junit/test-results.xml --cov=openlxp-xia-dau --cov-report=xml --cov-report=html
+        docker-compose --env-file ./.env run app sh -c "coverage run manage.py test --tag=unit && flake8 && coverage report"
     - name: Upload Coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
