--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ DB_USER=${{ secret.DB_USER }}
 DB_PASSWORD=${{ secrets.DB_PASSWORD }}
 DB_ROOT_PASSWORD=${{ secrets.DB_ROOT_PASSWORD }}
 DB_HOST=${{ secrets.DB_HOST }}
+SECRET_KEY=${{ secrets.SECRET_KEY }}
+SECRET_KEY_VAL=${{ secrets.SECRET_KEY_VAL }}
