--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ DB_ROOT_PASSWORD=${{ secrets.DB_ROOT_PASSWORD }}
 DB_HOST=${{ secrets.DB_HOST }}
 SECRET_KEY=${{ secrets.SECRET_KEY }}
 SECRET_KEY_VAL=${{ secrets.SECRET_KEY_VAL }}
+ES_HOST=${{ secrets.ES_HOST }}
+ES_INDEX=${{ secrets.ES_INDEX }}
