--- a/.env
+++ b/.env
@@ -7,3 +7,8 @@ SECRET_KEY=${{ secrets.SECRET_KEY }}
 SECRET_KEY_VAL=${{ secrets.SECRET_KEY_VAL }}
 ES_HOST=${{ secrets.ES_HOST }}
 ES_INDEX=${{ secrets.ES_INDEX }}
+MYSQL_DATABASE=${{ secrets.DB_NAME }}
+# MYSQL_USER: 'root'
+MYSQL_PASSWORD=${{ secrets.DB_PASSWORD }}
+MYSQL_ROOT_PASSWORD=${{ secrets.DB_ROOT_PASSWORD }}
+MYSQL_HOST: ''
