--- a/.env
+++ b/.env
@@ -12,3 +12,6 @@ MYSQL_DATABASE=${{ secrets.DB_NAME }}
 MYSQL_PASSWORD=${{ secrets.DB_PASSWORD }}
 MYSQL_ROOT_PASSWORD=${{ secrets.DB_ROOT_PASSWORD }}
 MYSQL_HOST: ''
+DJANGO_SUPERUSER_USERNAME=${{ secrets.DJANGO_SUPERUSER_USERNAME }}
+DJANGO_SUPERUSER_PASSWORD=${{ secrets.DJANGO_SUPERUSER_PASSWORD }}
+DJANGO_SUPERUSER_EMAIL=${{ secrets.DJANGO_SUPERUSER_EMAIL }}
