--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DB_NAME=${{ secrets.DB_NAME }}
-DB_USER=${{ secret.DB_USER }}
-DB_PASSWORD=${{ secrets.DB_PASSWORD }}
-DB_ROOT_PASSWORD=${{ secrets.DB_ROOT_PASSWORD }}
-DB_HOST=${{ secrets.DB_HOST }}
+DB_NAME=django
+DB_USER=root
+DB_PASSWORD=password
+DB_ROOT_PASSWORD=password
+DB_HOST=db
 SECRET_KEY=${{ secrets.SECRET_KEY }}
 SECRET_KEY_VAL=${{ secrets.SECRET_KEY_VAL }}
 ES_HOST=${{ secrets.ES_HOST }}
