--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ DB_NAME=django
 DB_USER=root
 DB_PASSWORD=password
 DB_ROOT_PASSWORD=password
-DB_HOST=127.0.0.1
+DB_HOST=db
 SECRET_KEY=${{ secrets.SECRET_KEY }}
 SECRET_KEY_VAL=${{ secrets.SECRET_KEY_VAL }}
 ES_HOST=${{ secrets.ES_HOST }}
