--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -32,7 +32,7 @@ jobs:
         pip install pytest-cov
         pwd
         docker network create openlxp
-        docker-compose --env-file ./.env run app sh -c "coverage run manage.py test --tag=unit && flake8 && coverage report"
+        docker-compose --env-file ./.env run app sh -c "python manage.py waitdb && coverage run manage.py test --tag=unit && flake8 && coverage report"
     - name: Upload Coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
