--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -10,7 +10,7 @@ on:
       - main
       - micson-test-WIP
 jobs:
-  run:
+  test code:
     name: Code Test
     runs-on: ubuntu-latest
     env:
@@ -40,6 +40,7 @@ jobs:
         path_to_write_report: ./coverage/codecov_report.txt
         
   build:
+    needs: test code
     name: Build Docker Image
     runs-on: ubuntu-latest
     steps:
