--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ DB_NAME=${{ secrets.DB_NAME }}
 DB_USER=${{ secrets.DB_USER }}
 DB_PASSWORD=${{ secrets.DB_PASSWORD }}
 DB_ROOT_PASSWORD=${{ secrets.DB_ROOT_PASSWORD }}
-DB_HOST=${{ secrets.DB_HOST }}
+DB_HOST=db
 SECRET_KEY=${{ secrets.SECRET_KEY }}
 SECRET_KEY_VAL=${{ secrets.SECRET_KEY_VAL }}
 ES_HOST=${{ secrets.ES_HOST }}
