--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_NAME=django
 DB_USER=root
-DB_PASSWORD=password
-DB_ROOT_PASSWORD=password
+DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+DB_ROOT_PASSWORD=${{ secrets.DB_ROOT_PASSWORD }}
 DB_HOST=db
 SECRET_KEY=${{ secrets.SECRET_KEY }}
 SECRET_KEY_VAL=${{ secrets.SECRET_KEY_VAL }}
