--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -33,6 +33,7 @@ jobs:
         pwd
         docker network create openlxp
         docker-compose --env-file ./.env run app sh -c "python manage.py waitdb && coverage run manage.py test --tag=unit && flake8 && coverage report"
+        coverage report --fail-under=90
     - name: Upload Coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
