--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -32,11 +32,12 @@ jobs:
         pip install pytest-cov
         pwd
         docker network create openlxp
-        docker-compose --env-file ./.env run app sh -c "python manage.py waitdb && coverage run manage.py test --tag=unit && flake8 && coverage report && coverage report --fail-under=90"
-    - name: Upload Coverage to Codecov
-      uses: codecov/codecov-action@v1
-      with:
-        fail_ci_if_error: true
+        docker-compose --env-file ./.env run app sh -c "python manage.py waitdb && coverage run manage.py test --tag=unit && flake8 && coverage report && coverage report --fail-under=80"
+# Commenting this step for now. 
+#    - name: Upload Coverage to Codecov
+#      uses: codecov/codecov-action@v1
+#      with:
+#        fail_ci_if_error: true
 #        path_to_write_report: ./coverage/codecov_report.txt
         
   build:
