--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -31,7 +31,7 @@ jobs:
         pip install pytest
         pip install pytest-cov
         pwd
-        git clone https://github.com/OpenLXP/openlxp-private.git
+        gh repo clone OpenLXP/openlxp-private
         docker network create openlxp
         docker-compose --env-file /openlxp-private/openlxp-xds-env/.env run app sh -c "python manage.py waitdb && coverage run manage.py test --tag=unit && flake8 && coverage report && coverage report --fail-under=80"
 # Commenting this step for now. 
