--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -26,6 +26,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r ./requirements.txt
+    - name: Checkout private repository
+      with:
+        repository: openlxp-private
+        token: ${{ secrets.ACCESS_TOKEN }}
     - name: Generate Coverage Report
       run: |
         pip install pytest
