--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -26,17 +26,19 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r ./requirements.txt
-    - name: Checkout private repository
-      uses: actions/checkout@main
-      with:
-        repository: openlxp/openlxp-private
-        token: ${{ secrets.ACCESS_TOKEN }}
+#    - name: Checkout private repository
+#      uses: actions/checkout@main
+#      with:
+#        repository: openlxp/openlxp-private
+#        token: ${{ secrets.ACCESS_TOKEN }}
     - name: Generate Coverage Report
+      env:
+        GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
       run: |
         pip install pytest
         pip install pytest-cov
         pwd
-        git clone git@github.com:openlxp/openlxp-private.git
+        git clone https://micson-us:${{ secrets.ACCESS_TOKEN }}@github.com/OpenLXP/openlxp-private.git
         cp ./openlxp-private/openlxp-xds-env/.env .
         docker network create openlxp
         docker-compose --env-file ./.env run app sh -c "python manage.py waitdb && coverage run manage.py test --tag=unit && flake8 && coverage report && coverage report --fail-under=80"
