Feature/UI config (#9)
Added models to support course image fallback and course hightlights; added spotlight api to fetch configured courses from the configured XIS

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,10 +15,11 @@ services:
       - openlxp
 
   app:
+    container_name: openlxp-xds
     build:
       context: .
     ports:
-      - "8080:8020"
+      - "8100:8020"
     command: >
       sh -c ". /opt/app/start-app.sh"
     environment:
