--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       LOG_PATH: "${LOG_PATH}"
     volumes:
       - ./app:/opt/app/openlxp-xds
+      - ${CERT_VOLUME}:/etc/ssl/certs/ca-certificates.pem
     depends_on:
       - db
     networks:
