--- a/requirements.txt
+++ b/requirements.txt
@@ -31,3 +31,7 @@ django-rest-knox>=4.1.0,<4.2.0
 boto3~=1.16.54
 
 django-ses>=2.0.0 , <2.1.0
+
+django_saml2_auth>=2.2.1, <2.3.0
+
+drf-jwt>=1.19.1, <1.20.0
