--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,9 @@ services:
       ES_HOST: "${ES_HOST}"
       ES_INDEX: "${ES_INDEX}"
       LOG_PATH: "${LOG_PATH}"
+      ENTITY_ID: "${ENTITY_ID}"
+      SP_PUBLIC_CERT: "${SP_PUBLIC_CERT}"
+      SP_PRIVATE_KEY: "${SP_PRIVATE_KEY}"
     volumes:
       - ./app:/opt/app/openlxp-xds
     depends_on:
