Update requirement to new auth package

--- a/requirements.txt
+++ b/requirements.txt
@@ -34,4 +34,4 @@ django-ses>=2.0.0 , <2.1.0
 
 openlxp-notification >=1.2.0
 
-openlxp-authentication >=0.1, <=1.0
+openlxp-authentication >=1.1.0, <1.2
