--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-mysqlclient>=2.0.3,<2.1.0
+mysql-connector-python >= 8.0.28
 
 django-mysql>=3.10.0,<3.11.0
 
@@ -30,6 +30,6 @@ boto3~=1.16.54
 
 django-ses>=2.0.0 , <2.1.0
 
-openlxp-notification >=1.2.0
+openlxp-notification>=1.3.0
 
 openlxp-authentication >=1.1.0, <1.2
