--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-mysqlclient>=2.0.3,<2.1.0
+mysql-connector-python >= 8.0.28
 
 django-mysql>=3.10.0,<3.11.0
 
@@ -26,12 +26,10 @@ django-model-utils>=4.1.1,<4.2.0
 
 Pillow>=8.2.0,<8.3.0
 
-django-rest-knox>=4.1.0,<4.2.0
-
 boto3~=1.16.54
 
 django-ses>=2.0.0 , <2.1.0
 
-openlxp-notification >=1.2.0
+openlxp-notification>=1.3.0
 
-openlxp-authentication >=0.1, <=1.0
+openlxp-authentication >=1.1.0, <1.2
