--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,8 +40,11 @@ services:
       ENTITY_ID: "${ENTITY_ID}"
       SP_PUBLIC_CERT: "${SP_PUBLIC_CERT}"
       SP_PRIVATE_KEY: "${SP_PRIVATE_KEY}"
+      BAD_HOST: "${BAD_HOST}"
+      OVERIDE_HOST: "${OVERIDE_HOST}"
     volumes:
       - ./app:/opt/app/openlxp-xds
+      - ${CERT_VOLUME}:/etc/ssl/certs/ca-certificates.pem
     depends_on:
       - db
     networks:
