--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -34,6 +34,7 @@ jobs:
     - name: Generate Coverage Report
       env:
         GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        CERT_VOLUME: ${{ secrets.CERT_VOLUME }}
       run: |
         echo "Cloning private repository"
         git clone https://openlxp-host:${{ secrets.ACCESS_TOKEN }}@github.com/OpenLXP/openlxp-private.git
