--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ mysql-connector-python >= 8.0.28
 
 django-mysql>=3.10.0,<3.11.0
 
-Django>=3.2.3
+Django>=3.2.3,<4.0
 
 djangorestframework>=3.12.2,<3.13.0
 
@@ -14,11 +14,11 @@ martor>=1.5.8,<1.6.0
 
 django-cors-headers>=3.7.0,<3.8.0
 
-django-elasticsearch-dsl>=7.1.4, <7.2.0
+django-elasticsearch-dsl>=7.2.2,<7.3.0
 
-django_elasticsearch_dsl_drf>=0.21, <1.0
+django_elasticsearch_dsl_drf>=0.22.2,<0.23.0
 
-elasticsearch>=7.0.0,<7.1.0
+elasticsearch>=7.16.3,<7.17.0
 
 coverage>=5.5,<6.0
 
