--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-mysql-connector-python >= 8.0.28, <=8.0.29
+#mysql-connector-python >= 8.0.28, <=8.0.29
+mysql-connector-python >= 8.0.33, <=8.0.34
 
-django-mysql>=3.10.0,<3.11.0
+#django-mysql>=3.10.0,<3.11.0
+django-mysql>=4.0.0,<5.0.0
 
-Django>=3.2.3,<4.0
+#Django>=3.2.3,<4.0
+Django>=3.2.0,<4.0.0
 
 djangorestframework>=3.12.2,<3.13.0
 
