--- a/.github/workflows/cd-workflows.yml
+++ b/.github/workflows/cd-workflows.yml
@@ -92,5 +92,5 @@ jobs:
         echo "Starting docker build"
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         echo "Pushing image to ECR..."
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG:latest
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG:${{ github.sha }}
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY/$IMAGE_TAG:latest
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY/$IMAGE_TAG:${{ github.sha }}
