--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ coverage>=5.5,<6.0
 
 django-model-utils>=4.1.1,<4.2.0
 
-Pillow>=8.2.0,<8.3.0
+Pillow>=8.2.0
 
 boto3~=1.16.54
 
@@ -33,3 +33,11 @@ django-ses>=2.0.0 , <2.1.0
 openlxp-notification>=1.3.0
 
 openlxp-authentication >=1.1.0, <1.2
+
+django-admin-interface>=0.28.3
+ 
+django-colorfield>=0.11.0
+ 
+python-slugify>=8.0.1
+ 
+text-unidecode>=1.3
