--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ Django>=3.2.3,<4.0
 
 djangorestframework>=3.12.2,<3.13.0
 
+django-notifications-hq>=1.8.3, <2.0
+
 flake8>=3.8.4,<3.9.0
 
 gunicorn>=20.0.4,<20.1.0
