--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,8 @@ django-notifications-hq>=1.8.3, <2.0
 
 flake8>=3.8.4,<3.9.0
 
-gunicorn>=20.0.4,<20.1.0
+# gunicorn>=20.0.4,<20.1.0
+gunicorn>=22.0.0, <22.1.0
 
 martor>=1.5.8,<1.6.0
 
