--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,20 @@
 bleach~=6.0.0
 
-mysql-connector-python >= 8.0.28, <=8.0.29
+# mysql-connector-python >= 8.0.28, <=8.0.29
+mysql-connector-python==8.0.33
 
 django-mysql>=3.10.0,<3.11.0
 
 Django>=3.2.3,<4.0
 
-djangorestframework>=3.12.2,<3.13.0
+djangorestframework>=3.13.0,<3.16.0
 
 django-notifications-hq>=1.8.3, <2.0
 
 flake8>=3.8.4,<3.9.0
 
-gunicorn>=20.0.4,<20.1.0
+# gunicorn>=20.0.4,<20.1.0
+gunicorn>=22.0.0, <22.1.0
 
 martor>=1.5.8,<1.6.0
 
@@ -32,11 +34,12 @@ Pillow>=10.2.0
 
 boto3~=1.16.54
 
-django-ses>=2.0.0 , <2.1.0
+# django-ses>=2.0.0 , <2.1.0
+django-ses~=3.5.0
 
 openlxp-notification>=1.3.0
 
-openlxp-authentication >=1.1.0, <1.2
+openlxp-authentication >=1.1.2, <1.2
 
 django-admin-interface>=0.28.3
  
