--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   db:
-    image: mysql:5.7
+    image: mysql:8.4
     ports:
       - '3306:3306'
     environment:
@@ -33,8 +33,8 @@ services:
       AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
       AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
       AWS_DEFAULT_REGION: "${AWS_DEFAULT_REGION}"
-      REQUESTS_CA_BUNDLE: '/etc/ssl/certs/ca-certificates.pem'
-      AWS_CA_BUNDLE: '/etc/ssl/certs/ca-certificates.pem'
+      REQUESTS_CA_BUNDLE: '/etc/ssl/certs/ca-certificates.crt'
+      AWS_CA_BUNDLE: '/etc/ssl/certs/ca-certificates.crt'
       SECRET_KEY_VAL: "${SECRET_KEY_VAL}"
       LOG_PATH: "${LOG_PATH}"
       ENTITY_ID: "${ENTITY_ID}"
@@ -42,6 +42,7 @@ services:
       SP_PRIVATE_KEY: "${SP_PRIVATE_KEY}"
       BAD_HOST: "${BAD_HOST}"
       OVERIDE_HOST: "${OVERIDE_HOST}"
+      LOGIN_REDIRECT_URL: "${LOGIN_REDIRECT_URL}"
     volumes:
       - ./app:/opt/app/openlxp-xds
     depends_on:
