--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 bleach~=6.0.0
 
-mysql-connector-python >= 8.0.28, <=8.0.29
+mysql-connector-python == 8.0.28
 
-django-mysql>=3.10.0,<3.11.0
+django-mysql==4.4.0
 
 Django>=3.2.3,<4.0
 
@@ -13,6 +13,8 @@ django-notifications-hq>=1.8.3, <2.0
 flake8>=3.8.4,<3.9.0
 
 gunicorn>=20.0.4,<20.1.0
+
+isort==5.11.5
 
 martor>=1.5.8,<1.6.0
 
@@ -34,7 +36,7 @@ boto3~=1.16.54
 
 django-ses>=2.0.0 , <2.1.0
 
-openlxp-notification>=1.3.0
+openlxp-notification>=1.4.0, <1.50
 
 openlxp-authentication >=1.1.0, <1.2
 
