--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,8 @@ martor>=1.5.8,<1.6.0
 openlxp-authentication >=1.1.2, <1.2
 
 openlxp-notification>=1.4.0, <1.5.0
+
+openlxp-P1-notification==0.0.4
  
 Pillow>=10.2.0
  
