--- a/requirements.txt
+++ b/requirements.txt
@@ -36,15 +36,13 @@ isort==5.11.5
 
 martor>=1.5.8,<1.6.0
 
-martor>=1.5.8,<1.6.0
-
 mysql-connector-python == 8.0.28
 
 openlxp-authentication >=1.1.2, <1.2
 
 openlxp-notification>=1.4.0, <1.5.0
 
-Pillow>=10.2.0
+Pillow>=10.3.0, <10.4.0
 
 python-slugify>=8.0.1
 
