--- a/requirements.txt
+++ b/requirements.txt
@@ -42,10 +42,12 @@ martor>=1.5.8,<1.6.0
 
 openlxp-authentication >=1.1.2, <1.2
 
-openlxp-P1-notification==0.0.4
+openlxp-P1-notification >=0.0.3, <2.0.0
  
 Pillow>=10.2.0
  
 python-slugify>=8.0.1
+
+sort-requirements==1.3.0
  
 text-unidecode>=1.3
