--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,8 @@ services:
       BAD_HOST: "${BAD_HOST}"
       OVERIDE_HOST: "${OVERIDE_HOST}"
       LOGIN_REDIRECT_URL: "${LOGIN_REDIRECT_URL}"
+      CSRF_COOKIE_DOMAIN: "${CSRF_COOKIE_DOMAIN}"
+      CSRF_TRUSTED_ORIGINS: "${CSRF_TRUSTED_ORIGINS}"
       P1PS_DOMAIN: "${P1PS_DOMAIN}"
       TEAM_TOKEN: "${TEAM_TOKEN}"
       TEAM_ID: "${TEAM_ID}"
