--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,8 @@ openlxp-P1-notification >=0.0.4, <2.0.0
 
 Pillow>=10.3.0, <10.4.0
 
-python-slugify>=8.0.1 
+python-slugify>=8.0.1
+
+sort-requirements==1.3.0
 
 text-unidecode>=1.3
