Fixing ironbank image deployment

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/django,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=django,python
 
+# Docker kill script
+kill.sh
+
 ### Django ###
 *.log
 *.pot
