--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3"
-
 services:
   db:
     image: mysql:8.0.36
@@ -16,13 +14,19 @@ services:
 
   app:
     container_name: openlxp-xds
-    build:
-      context: .
+    image: registry1.dso.mil/ironbank/adl-ousd/ecc-openlxp/ecc-openlxp-xds
     ports:
       - "8100:8020"
     command: >
       sh -c ". /tmp/app/start-app.sh"
     environment:
+      AWS_ACCESS_KEY_ID: ""
+      AWS_SECRET_ACCESS_KEY: ""
+      AWS_DEFAULT_REGION: "${AWS_DEFAULT_REGION}"
+      COOKIE_NAME: "${COOKIE_NAME}"
+      COOKIE_VALUE: "${COOKIE_VALUE}"
+      CSRF_COOKIE_DOMAIN: "${CSRF_COOKIE_DOMAIN}"
+      CSRF_TRUSTED_ORIGINS: "${CSRF_TRUSTED_ORIGINS}"
       DB_NAME: "${DB_NAME}"
       DB_USER: "${DB_USER}"
       DB_PASSWORD: "${DB_PASSWORD}"
@@ -30,30 +34,32 @@ services:
       DJANGO_SUPERUSER_USERNAME: "${DJANGO_SUPERUSER_USERNAME}"
       DJANGO_SUPERUSER_PASSWORD: "${DJANGO_SUPERUSER_PASSWORD}"
       DJANGO_SUPERUSER_EMAIL: "${DJANGO_SUPERUSER_EMAIL}"
-      AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
-      AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
-      AWS_DEFAULT_REGION: "${AWS_DEFAULT_REGION}"
-      REQUESTS_CA_BUNDLE: '/etc/ssl/certs/ca-certificates.crt'
-      AWS_CA_BUNDLE: '/etc/ssl/certs/ca-certificates.crt'
-      SECRET_KEY_VAL: "${SECRET_KEY_VAL}"
-      LOG_PATH: "${LOG_PATH}"
       ENTITY_ID: "${ENTITY_ID}"
+      LOGIN_REDIRECT_URL: "${LOGIN_REDIRECT_URL}"
+      LOG_PATH: "${LOG_PATH}"
+      # P1PS_DOMAIN: "${P1PS_DOMAIN}"
+      SECRET_KEY_VAL: "${SECRET_KEY_VAL}"
       SP_PUBLIC_CERT: "${SP_PUBLIC_CERT}"
       SP_PRIVATE_KEY: "${SP_PRIVATE_KEY}"
-      BAD_HOST: "${BAD_HOST}"
-      OVERIDE_HOST: "${OVERIDE_HOST}"
-      LOGIN_REDIRECT_URL: "${LOGIN_REDIRECT_URL}"
-      CSRF_COOKIE_DOMAIN: "${CSRF_COOKIE_DOMAIN}"
-      CSRF_TRUSTED_ORIGINS: "${CSRF_TRUSTED_ORIGINS}"
-      P1PS_DOMAIN: "${P1PS_DOMAIN}"
-      TEAM_TOKEN: "${TEAM_TOKEN}"
       TEAM_ID: "${TEAM_ID}"
-      COOKIE_NAME: "${COOKIE_NAME}"
-      COOKIE_VALUE: "${COOKIE_VALUE}"
+      TEAM_TOKEN: "${TEAM_TOKEN}"
     volumes:
       - ./app:/tmp/app/openlxp-xds
     depends_on:
       - db
+    networks:
+      - openlxp
+
+  nginx:
+    image: nginx:latest
+    ports:
+      - "8001:8020"
+    volumes:
+      - ./nginx.default:/etc/nginx/conf.d/default.conf
+      - ./app:/tmp/app/openlxp-xds
+    restart: always
+    depends_on:
+      - app
     networks:
       - openlxp
 
