--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,10 +15,12 @@ services:
   app:
     container_name: openlxp-xds
     image: registry1.dso.mil/ironbank/adl-ousd/ecc-openlxp/ecc-openlxp-xds
+    # build:
+    #   context: .
     ports:
       - "8100:8020"
     command: >
-      sh -c ". /tmp/app/start-app.sh"
+      sh -c ". /tmp/start-app.sh"
     environment:
       AWS_ACCESS_KEY_ID: ""
       AWS_SECRET_ACCESS_KEY: ""
@@ -44,7 +46,7 @@ services:
       TEAM_ID: "${TEAM_ID}"
       TEAM_TOKEN: "${TEAM_TOKEN}"
     volumes:
-      - shared-app-data:/tmp/app/openlxp-xds
+      - shared-app-data:/tmp/openlxp-xds
     depends_on:
       - db
     networks:
@@ -56,8 +58,7 @@ services:
       - "8101:8020"
     volumes:
       - ./nginx.default:/etc/nginx/conf.d/default.conf
-      # - ./app:/tmp/app/openlxp-xds
-      - shared-app-data:/tmp/app/openlxp-xds
+      - shared-app-data:/tmp/openlxp-xds
     restart: always
     depends_on:
       - app
