--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ django-cors-headers>=3.7.0,<3.8.0
 
 django-elasticsearch-dsl>=7.3.0,<7.4.0
 
+django-health-check>3.18.0, <3.19.0
+
 django-model-utils>=4.1.1,<4.2.0
 
 django-mysql==4.4.0
