--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -30,22 +30,22 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r ./requirements.txt
     # Start running test scripts and generate the coverage report
-    # - name: Generate Coverage Report
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-    #     CERT_VOLUME: ${{ secrets.CERT_VOLUME }}
-    #   run: |
-    #     echo "Cloning private repository"
-    #     git clone https://openlxp-host:${{ secrets.ACCESS_TOKEN }}@github.com/OpenLXP/openlxp-private.git
-    #     echo "Private repository cloned successfully"
-    #     echo "Copying .env file from openlxp-private to current working directory"
-    #     cp ./openlxp-private/openlxp-xds-env/.env .
-    #     echo "Copied .env file successfully"
-    #     echo "Create openlxp docker network"
-    #     docker network create openlxp
-    #     echo "Docker network successfully created"
-    #     echo "Running coverage unit test"
-    #     docker compose --env-file ./.env run app sh -c "python manage.py waitdb && coverage run manage.py test --tag=unit && flake8 && coverage report && coverage report --fail-under=80"
+    - name: Generate Coverage Report
+      env:
+        GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        CERT_VOLUME: ${{ secrets.CERT_VOLUME }}
+      run: |
+        echo "Cloning private repository"
+        git clone https://openlxp-host:${{ secrets.ACCESS_TOKEN }}@github.com/OpenLXP/openlxp-private.git
+        echo "Private repository cloned successfully"
+        echo "Copying .env file from openlxp-private to current working directory"
+        cp ./openlxp-private/openlxp-xds-env/.env .
+        echo "Copied .env file successfully"
+        echo "Create openlxp docker network"
+        docker network create openlxp
+        echo "Docker network successfully created"
+        echo "Running coverage unit test"
+        docker compose --env-file ./.env run app sh -c "python manage.py waitdb && coverage run manage.py test --tag=unit && flake8 && coverage report && coverage report --fail-under=80"
 
   # sonarcloud:
   #     name: SonarCloud
