Adding health-checks to workflow

--- a/.github/workflows/code-test-workflow.yaml
+++ b/.github/workflows/code-test-workflow.yaml
@@ -1,10 +1,9 @@
 # name: EDLM Portal Backend Code CI/CD
 
 on:
-    pull_request:
-      branches: 
-        - main
-      types: [opened, synchronize]
+    push:
+        branches:
+        - health-checks
   
 jobs:
   pip-install:
