--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ isort==5.11.5
 
 martor>=1.5.8,<1.6.0
 
-mysql-connector-python==9.0.0
+mysql-connector-python>=9.1.0, <9.2.0
 
 openlxp-authentication >=1.1.2, <1.2
 
