--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,9 @@ martor>=1.5.8,<1.6.0
 
 mysql-connector-python>=9.1.0, <9.2.0
 
-openlxp-authentication >=1.1.2, <1.2
+#openlxp-authentication >=1.1.2, <1.2
+
+p1-auth>=0.1.6,<1.0.0
 
 openlxp-P1-notification >=0.0.4, <2.0.0
 
