--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,6 @@ p1-auth>=0.1.6,<1.0.0
 openlxp-P1-notification>=0.0.4,<2.0.0 
 Pillow>=10.3.0,<10.4.0 
 python-slugify>=8.0.1 
-setuptools>=80.9.0,<80.1.0
+setuptools==80.9.0
 sort-requirements==1.3.0 
 text-unidecode>=1.3
