--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ boto3~=1.16.54
 
 coverage>=5.5,<6.0
 
-django_elasticsearch_dsl_drf>=0.22.2,<0.23.0
+django_elasticsearch_dsl_drf>=0.22.5,<0.23.0
 
 django-admin-interface>=0.28.3
 
@@ -12,33 +12,35 @@ django-colorfield>=0.11.0
 
 django-cors-headers>=3.7.0,<3.8.0
 
-django-health-check>3.18.0, <3.19.0
+django-csp>=3.7,<3.8
 
 django-elasticsearch-dsl>=7.3.0,<7.4.0
 
+django-health-check>3.18.0, <3.19.0
+
 django-model-utils>=4.1.1,<4.2.0
 
-django-mysql==4.4.0
+django-mysql>=4.4.0,<5.0.0
 
 django-notifications-hq>=1.8.3, <2.0
 
 django-ses~=3.5.0
 
-Django>=4.2,<5.0
+Django>=4.2.21,<5.0
 
 djangorestframework>=3.15.2,<3.16.0
 
-elasticsearch>=7.16.3,<7.17.0
+elasticsearch>=7.17.0,<7.18.0
 
 flake8>=3.8.4,<3.9.0
 
-gunicorn>=22.0.0, <22.1.0
+gunicorn>=23.0.0, <23.1.0
 
 isort==5.11.5
 
 martor>=1.5.8,<1.6.0
 
-mysql-connector-python == 8.0.28
+mysql-connector-python>=9.1.0, <9.2.0
 
 openlxp-authentication >=1.1.2, <1.2
 
@@ -46,10 +48,10 @@ openlxp-notification>=1.4.6, <1.5.0
 
 Pillow>=10.3.0, <10.4.0
 
+PyJWT>=2.0.0
+
 python-slugify>=8.0.1
 
 sort-requirements==1.3.0
 
 text-unidecode>=1.3
-
-PyJWT>=2.0.0
